[package]
name = "teki"
version = "0.2.0"
description = "Touhou-style shoot'em up"
authors = ["o2sh <ossama-hjaji@live.fr>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/o2sh/teki"
exclude = ["resources/*"]


[dependencies]
clap = "2.33.3"
legion = "0.3.1"
rand = "0.8.0"
bitflags = "1.2.1"
lazy_static = "1.4.0"
array-macro = "1.0.5"
vector2d = "2.2.0"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image", "mixer"]