[package]
name = "teki"
version = "0.3.0"
description = "Touhou-style shoot'em up"
authors = ["o2sh <ossama-hjaji@live.fr>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/o2sh/teki"
exclude = ["resources/*"]

[dependencies]
clap = "2.33.3"
rand = "0.8.0"
vector2d = "2.2.0"
lazy_static = "1.4.0"
counted-array = "0.1.2"

teki-ecs = {path = "./ecs" }
teki-common = {path = "./common" }

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image","unsafe_textures", "mixer"]

[workspace]
members = [
    "ecs",
    "wasm",
    "common"
]