[package]
name = "teki-common"
version = "0.3.0"
description = "Touhou-style shoot'em up"
authors = ["o2sh <ossama-hjaji@live.fr>"]
edition = "2018"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/o2sh/teki/tree/main/common"

[dependencies]
vector2d = "2.2.0"
bitflags = "1.2.1"
regex = "1.3.4"
serde_json = "1.0"